-
Bug
-
Resolution: Done
-
P0: Blocker
-
Qt Creator 2.7.1
-
None
When testing the Windows binary packages, building an app failed because Qt Creator defaulted to using "ma-make.exe" for building the project. This file does not exist and seems to be a special make executable bundled with Necessitas.
The build got further when overriding ma-make with mingw32-make in the build settings, but ma-make still seemed to be hard coded in the installation step where the binary is copied into the Android project. So the build still failed and there did not seem to be any work around for it.
- is required for
-
QTBUG-31105 Qt 5.1 RC1 release tasks
-
- Closed
-
- relates to
-
QTBUG-30212 Change packaged MinGW to x32-4.8.0-release-win32-dwarf-rev2.7z
-
- Closed
-