Android: Use mingw32-make if ma-make is not found

Task-number: QTCREATORBUG-9297

Change-Id: I06345bd53fe5672ce7606745e6b19f89379a18db
Reviewed-by: Ray Donnelly <mingw.android@gmail.com>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>